<resources>
    <string name="app_name">Tv Info</string>


    <string name="director">Director: </string>
    <string name="writer">Writer: </string>

    <string name="movies">Movies</string>
    <string name="tv_shows">Tv shows</string>
    <string name="actors">Actors</string>

    <string name="choose_from_list">Choose from list</string>
    <string name="croatian_basic_channels">Croatian basic channels</string>
    <string name="serbian_channels">Serbian channels</string>
    <string name="bosnian_channels">Bosnian channels</string>
    <string name="montenegro_channels">Montenegro channels</string>
    <string name="movie_channels">Movie channels</string>
    <string name="sports_channels">Sport channels</string>
    <string name="documentary_channels">Documentary channels</string>
    <string name="news_channels">News channels</string>
    <string name="children_channels">Children channels</string>
    <string name="entertainment_channels">Entertainment channels</string>
    <string name="croatian_extra_channels">Croatian extra channels</string>

    <string name="top_rated_movies">Top rated movies:</string>
    <string name="popular_movies">Popular movies:</string>
    <string name="cinema_movies">Movies in cinema:</string>
    <string name="upcoming_movies">Upcoming movies:</string>
    <string name="movie_genres">Movie genres:</string>

    <string name="popular_tv_shows">Popular Tv shows:</string>
    <string name="trending_tv_shows">Trending Tv shows:</string>
    <string name="airing_tv_shows">Airing Tv shows:</string>
    <string name="tv_show_genres">Tv show genres:</string>

    <string name="overview">Overview</string>
    <string name="genres">Genres:</string>
    <string name="movie_information">Information about a movie:</string>
    <string name="tv_show_information">Information about a tv show:</string>
    <string name="original_title">Orig. title:</string>
    <string name="released">Realeased:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="production">Production:</string>
    <string name="trailers">Youtube Trailers:</string>
    <string name="epizodes">Epizodes:</string>
    <string name="seasons">Seasons:</string>
    <string name="created_by">Created by:</string>

    <string name="starred_in">Starred in:</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="no_internet_message">You are not connected to internet.Please connect and try again.</string>
    <string name="server_timeout_message">Error in communication with server.Please try again</string>


    <string name="tab1">Tv guide</string>
    <string name="tab2">Movies</string>
    <string name="tab3">Tv shows</string>
    <string name="tab4">Favorites</string>



    <string name="favorite_movies">Movies added to favorite list</string>
    <string name="favorite_tv_shows">Tv shows added to favorite list</string>

    <string-array name="list_preference_entries">
        <item>Test</item>
    </string-array>

    <string-array name="list_preference_values">
        <item>test </item>
    </string-array>


</resources>