<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="croatian_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/croatian_basic_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="serbian_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/serbian_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="bosnian_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/bosnian_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="montenegro_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/montenegro_channels" />



    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="movie_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/movie_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="sports_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/sports_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="documentary_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/documentary_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="news_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/news_channels" />


    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="children_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/children_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="entertainment_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/entertainment_channels" />

    <MultiSelectListPreference
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_values"
        android:key="croatian_expanded_channels_multi_select_list"
        android:summary="@string/choose_from_list"
        android:title="@string/croatian_extra_channels" />

</androidx.preference.PreferenceScreen>