<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tv_guide"
        android:checked="true"
        android:icon="@drawable/ic_guide"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_movies"
        android:checked="false"
        android:icon="@drawable/ic_movie"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tv_shows"
        android:checked="false"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favourites"
        android:checked="false"
        android:icon="@drawable/star_white"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />
</menu>